# test_logger_plugin

.github/workflows/: build.yml
test_logger_plugin/: CMakeLists.txt  README.md
test_logger_plugin/include/aviutl2_sdk/: plugin2.h
test_logger_plugin/src/: test_logger.cpp
